# SlicerAutomatedDentalTools

./: .git-blame-ignore-revs  .gitignore  0001-STYLE-function-to-install-required-libraries.patch  0002-Style-combine-all-packages-installation-in-AREG.py.patch  0003-ENH-split-call-to-install-function-for-IOS-and-CBCT.patch  0004-ENH-pytorch3d-version-specified.patch  CMakeLists.txt  LICENCE  Logos.psd  README.md
ALI/: ALI.py  CMakeLists.txt  Names.json  UI_fct.py  server.py  tempo.txt
ALI/ALI_Method/: CBCT.py  IOS.py  Method.py  Progress.py  install_pytorch.py
ALI/Resources/UI/: ALI.ui
ALI_CBCT/: ALI_CBCT.py  ALI_CBCT.xml  CMakeLists.txt
ALI_CBCT/ALI_CBCT_utils/: __init__.py  agent.py  brain.py  constants.py  environment.py  io.py  preprocess.py
ALI_CLI/: ALI_CLI.py  ALI_CLI.xml  CMakeLists.txt
ALI_IOS/: ALI_IOS.py  ALI_IOS.xml  ALI_IOS_WSL.py  CMakeLists.txt  Func_Miniconda.py  install_lib.py  install_lib_wsl.py  install_libs.sh  link.py  monai_test.py  old_func_miniconda.py  principal.py  principal.spec  requirement.py  secondaire.py  server.py  server2.py  server3.py  setup_wsl.ps1  tempo.txt  test.py  test2.py  test_connect.py  test_wsl.py  wsl2.py
ALI_IOS/ALI_IOS_utils/: __init__.py  agent.py  io.py  mask_renderer.py  model.py  render.py  surface.py
ALI_IOS/utils/: ALI_IOS_WSL.py  requirement.py
ALI_IOS/utils_windows/: first.py  in_wsl.py  server.py
AMASSS/: AMASSS.py  CMakeLists.txt
AMASSS_CLI/: AMASSS_CLI.py  AMASSS_CLI.xml  AMASSS_cli.py  CMakeLists.txt
AREG/: AREG.py  CMakeLists.txt
AREG/AREG_Method/: CBCT.py  IOS.py  IOSCBCT.py  Method.py  Progress.py  install_pytorch.py
AREG/AREG_Methode/: CBCT.py  IOS.py  IOSCBCT.py  Methode.py  Progress.py
AREG/Resources/UI/: AREG.ui
AREG_CBCT/: AREG_CBCT.py  AREG_CBCT.xml  CMakeLists.txt
AREG_CBCT/AREG_CBCT_utils/: __init__.py  utils.py
AREG_IOS/: AREG_IOS.py  AREG_IOS.xml  CMakeLists.txt
AREG_IOS/AREG_IOS_utils/: ICP.py  PredPatch.py  __init__.py  check_deps.py  dataset.py  net.py  orientation.py  post_process.py  transformation.py  utils.py  vtkSegTeeth.py
ASO/: ASO.py  CMakeLists.txt
ASO/ASO_Method/: CBCT.py  IOS.py  Method.py  Progress.py  install_pytorch.py
ASO/Methode/: CBCT.py  IOS.py  Methode.py  Progress.py
ASO/Methode/IOS_utils/: Reader.py
ASO/Resources/UI/: ASO.ui
ASO_CBCT/: CMakeLists.txt  ImportLibrary.cmake  LinearTransform_t.tfm
ASO_CBCT/ASO_CBCT_utils/: Net.py  ResamplePreASO.py  __init__.py  utils.py
ASO_CBCT/PRE_ASO_CBCT/: CMakeLists.txt  PRE_ASO_CBCT.py  PRE_ASO_CBCT.xml
ASO_CBCT/SEMI_ASO_CBCT/: CMakeLists.txt  SEMI_ASO_CBCT.py  SEMI_ASO_CBCT.xml
ASO_IOS/: CMakeLists.txt  ImportLibrary.cmake
ASO_IOS/ASO_IOS_utils/: OFFReader.py  __init__.py  data_file.py  icp.py  pre_icp.py  transformation.py  utils.py
ASO_IOS/PRE_ASO_IOS/: CMakeLists.txt  PRE_ASO_IOS.py  PRE_ASO_IOS.xml
ASO_IOS/SEMI_ASO_IOS/: CMakeLists.txt  SEMI_ASO_IOS.py  SEMI_ASO_IOS.xml
AutoCrop3D/: CMakeLists.txt
AutoCrop3D/Crop_Volumes_CLI/: AutoCrop3D_CLI.py  AutoCrop3D_CLI.xml  CMakeLists.txt  Crop_Volumes_CLI.xml
AutoCrop3D/Crop_Volumes_CLI/Crop_Volumes_utils/: CropCBCT.py  FilesType.py  GenerateVTKfromSeg.py  __init__.py
AutoCrop3D/Crop_Volumes_UI/: AutoCrop3D.py  CMakeLists.txt
AutoCrop3D/Crop_Volumes_UI/Resources/UI/: AutoCrop3D.ui
AutoMatrix/: AutoMatrix.py  CMakeLists.txt
AutoMatrix/AutoMatrix_Method/: General_tools.py  Method.py  Progress.py  applyMatrix.py
AutoMatrix/Matrix_CLI/: CMakeLists.txt  Matrix_CLI.py  Matrix_CLI.xml
AutoMatrix/Matrix_CLI/Apply_matrix_utils/: GZ_tools.py  General_tools.py  Matrix_tools.py  OFFReader.py  VTK_tools.py  __init__.py
AutoMatrix/Method/: General_tools.py
AutoMatrix/Methode/: General_tools.py  __init__.py
AutoMatrix/Resources/UI/: AutoMatrix.ui
Automatrix_CLI/: Automatrix_CLI.py  Automatrix_CLI.xml  CMakeLists.txt
BATCHDENTALSEG/: BATCHDENTALSEG.py  CMakeLists.txt
BATCHDENTALSEG/BATCHDENTALSEGLib/: IconPath.py  (+5 more)
CLIC/: CLIC.py  CMakeLists.txt
CNE/: CMakeLists.txt  CNE.py
CNE_CLI/: CMakeLists.txt  CNE_CLI.py  CNE_CLI.xml
CNE_UI/: CMakeLists.txt  CNE_UI.py
DOCShapeAXI/: CMakeLists.txt  DOCShapeAXI.py
DOCShapeAXI_CLI/: CMakeLists.txt  DOCShapeAXI_CLI.py  DOCShapeAXI_CLI.xml  model_path.json
FlexReg/: ButterfkyPatch.py  CMakeLists.txt  FlexReg.py  seg.py  seg2.py
FlexReg/Dentalmodelseg/: first.py  second.py
FlexReg/FlexReg_utils/: __init__.py  install_pytorch.py  orientation.py  transform.py  util.py
FlexReg/Flex_Reg_CLI/: Flex_Reg_CLI.py  Flex_Reg_CLI.xml  __init__.py
FlexReg/Flex_Reg_CLI/Method/: ICP.py  __init__.py  draw.py  make_butterfly.py  orientation.py
FlexReg/Resources/UI/: ButterfkyPatch.ui  FlexReg.ui
FlexReg/utils/: install_pytorch.py
FlexReg_CLI/: CMakeLists.txt  FlexReg_CLI.py  FlexReg_CLI.xml  __init__.py
Flex_Reg_CLI/: CMakeLists.txt  Flex_Reg_CLI.py  Flex_Reg_CLI.xml
MRI2CBCT/: CMakeLists.txt  MRI2CBCT.py
MRI2CBCT/MRI2CBCT_utils/: Approx_MRI2CBCT.py  LR_crop.py  Method.py  Preprocess_CBCT.py  Preprocess_CBCT_MRI.py  Preprocess_MRI.py  Reg_MRI2CBCT.py  TMJ_crop.py  utils_CBCT.py
MRI2CBCT/Resources/UI/: MRI2CBCT.ui
MRI2CBCT/utils/: Method.py  Preprocess_CBCT.py  Preprocess_CBCT_MRI.py  Preprocess_MRI.py  Reg_MRI2CBCT.py  utils_CBCT.py
MRI2CBCT_CLI/: CMakeLists.txt  ImportLibrary.cmake  MRI2CBCT_CLI.py  MRI2CBCT_CLI.xml
MedX/: CMakeLists.txt  MedX.py
MedX_CLI/: CMakeLists.txt  ImportLibrary.cmake  MedX_CLI.py  MedX_CLI.xml  dashboard_full_dataframe.csv
Medical_Data_Anonymizer_Module/: CMakeLists.txt  Medical_Data_Anonymizer_Module.py
VFACE/: CMakeLists.txt  VFACE.py  createlistprocess.py  functionaq3dc.py
VFACE/Classes/: Line.py  Measure.py  Point.py  __init__.py
VFACE/Resources/ML/: download_info.json
VFACE/Resources/ML/Dataset111_453CT/nnUNetTrainer__nnUNetPlans__3d_fullres/: dataset.json  plans.json
VFACE/Resources/UI/: VFACE.ui
VFACE/VFACE_utils/: Group_landmark.py  Line.py  Measure.py  Progress.py  __init__.py  _batch_worker.py  createlistprocess.py  functionaq3dc.py  segmentation_logic.py
VFACE_CLI/: CMakeLists.txt  VFACE_CLI.py  VFACE_CLI.xml
(+78 files in other folders)
